--- a/src/components/todoItems.module.css
+++ b/src/components/todoItems.module.css
@@ -24,7 +24,7 @@
 }
 .todoData {
     height: 100%;
-    width: calc(60% - 30px);
+    width: 250px;
     font-size: 1.2rem;
     font-weight: 600;
     color: black;
@@ -32,7 +32,6 @@
     justify-content: start;
     align-items: center;
     padding: 0px 0px 0px 5px;
-    /* border: 1px solid black; */
 }
 .todoDate {
     height: 100%;
@@ -43,7 +42,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: 1px solid black; */
 }
 .delBtn {
     height: 65%;
